# ToastMCP

./: CHANGELOG.md  Cargo.toml  README.md  package.ps1
icons/: icons.txt
sounds/: sounds.txt
src/: assets.rs  main.rs  mcp.rs  notify.rs
