[package]
name = "toastmcp"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.58", features = [
  "Data_Xml_Dom",
  "UI_Notifications",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_Storage",
  "Win32_Storage_EnhancedStorage",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging"
] }
